--- a/app/src/main/res/layout/collective_member_row.xml
+++ b/app/src/main/res/layout/collective_member_row.xml
@@ -28,7 +28,7 @@
             android:textColor="#000000" />
 
         <Spinner
-            android:id="@+id/role_spinner"
+            android:id="@+id/collectiveRolesSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
