--- a/app/src/main/res/layout/activity_specific_collective.xml
+++ b/app/src/main/res/layout/activity_specific_collective.xml
@@ -30,28 +30,18 @@
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskPageTitle"
-        app:layout_constraintVertical_bias="0.012">
-
-        <ImageButton
-            android:id="@+id/back_btn"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#FFFFFF"
-            app:srcCompat="@drawable/backarrow"
-            tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintVertical_bias="0.011">
 
         <Space
             android:layout_width="215dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/saveOrCreateButton"
+        <Space
             android:layout_width="18dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Create" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -66,18 +56,18 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.125">
 
-        <androidx.constraintlayout.widget.Barrier
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:barrierDirection="top" />
-
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Collective ID:"
+            android:text="Collective Name:"
             android:textColor="#000000"
             android:textStyle="bold" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:barrierDirection="top" />
 
         <View
             android:id="@+id/divider"
@@ -85,16 +75,41 @@
             android:layout_height="1dp"
             android:background="@color/black" />
 
-        <EditText
-            android:id="@+id/taskDescription"
+        <TextView
+            android:id="@+id/collectiveNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp" />
+
+        <TextView
+            android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="This is where you write the description"
-            android:inputType="textMultiLine"
-            android:minHeight="48dp"
-            android:textColorHint="#717171" />
+            android:text="Collective ID:"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/divider7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black" />
+
+        <TextView
+            android:id="@+id/collectiveIDTextView"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -115,9 +130,9 @@
             android:background="@color/black" />
 
         <ListView
-            android:id="@+id/membersListView"
+            android:id="@+id/collectiveMembersListView"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="140dp"
             android:choiceMode="multipleChoice" />
 
         <Space
@@ -130,18 +145,43 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/addMemberButton"
+                android:layout_width="50dp"
+                android:layout_height="48dp"
                 android:layout_weight="1"
+                android:minHeight="48dp"
                 android:text="Add members" />
 
             <Button
-                android:id="@+id/button8"
-                android:layout_width="wrap_content"
+                android:id="@+id/deleteMemberButton"
+                android:layout_width="50dp"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:text="Delete members" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/leaveCollectiveButton"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Leave collective" />
+
+            <Button
+                android:id="@+id/deleteCollectiveButton"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Delete collective" />
         </LinearLayout>
 
     </LinearLayout>
