--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -50,7 +50,7 @@
         tools:listitem="@layout/task_layout" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/allTasksButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -68,7 +68,7 @@
         android:text="My tasks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintStart_toEndOf="@+id/allTasksButton"
         app:layout_constraintTop_toBottomOf="@+id/taskpage_tv" />
 
     <View
@@ -80,7 +80,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/allTasksButton" />
 
     <Button
         android:id="@+id/add_btn"
