--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -125,7 +125,7 @@
             app:layout_constraintVertical_bias="0.833">
 
             <ImageButton
-                android:id="@+id/imageButton6"
+                android:id="@+id/friendButton"
                 android:layout_width="128dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
