--- a/app/src/main/res/layout/activity_log_out.xml
+++ b/app/src/main/res/layout/activity_log_out.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".LogOutActivity">
 
+    <Button
+        android:id="@+id/logOutButton"
+        android:layout_width="167dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="196dp"
+        android:text="LOGOUT"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
