--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -33,8 +33,9 @@
         app:layout_constraintTop_toBottomOf="@+id/add_btn"
         app:layout_constraintVertical_bias="0.0" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:id="@+id/rv_todo"
+        android:orientation="vertical"
         android:layout_width="360dp"
         android:layout_height="286dp"
         android:layout_marginStart="24dp"
