--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -182,12 +182,25 @@
             android:layout_height="1dp"
             android:background="@color/black" />
 
-        <Spinner
-            android:id="@+id/taskCategories"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="Task Categories"
-            android:minHeight="48dp" />
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/taskCategories"
+                android:layout_width="207dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/createNewCategoryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="createNewCategory"
+                android:text="New category" />
+        </LinearLayout>
 
     </LinearLayout>
 
