--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -19,22 +19,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/rv_todo"
+    <ScrollView
         android:layout_width="360dp"
         android:layout_height="286dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="185dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskpage_tv"
         app:layout_constraintVertical_bias="0.239"
-        tools:itemCount="3"
-        tools:listitem="@layout/task_layout" />
+        >
+
+        <LinearLayout
+            android:id="@+id/rv_todo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="3"
+            tools:listitem="@layout/task_layout" />
+
+    </ScrollView>
 
     <Button
         android:id="@+id/allTasksButton"
