--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/fiends"
+        android:id="@+id/friends"
         android:title="Friends"
         android:icon="@drawable/ic_baseline_groups_24"/>
 
